--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
 
-<div ng-controller="weatherController" class="weatherController">
+<div ng-controller="weatherController" class="weather-controller">
 	<input type="text" ng-model="city" id="dataInput" placeholder="Введите название города" />
 	<button ng-click="this.showWeather( city )" type="button">Узнать погоду в этом городе</button>
 	<span class="description">{{descriptionEmpty}}</span>
 	<ul class="output">
 		<li ng-repeat="city in cities">
-			<span>{{city.city}}</span>
-			<img ng-src="http://openweathermap.org/img/w/{{city.image}}.png" alt="" />
-			<span>Температура {{city.degree}} °C</span>
-			<span>Скорость ветра {{city.speedWind}} м/с</span>
+			<span class="city">{{city.city}}</span>
+			<div class="data-weather">
+				<img ng-src="http://openweathermap.org/img/w/{{city.image}}.png" alt="" />
+				<span class="degrees">Температура {{city.degree}} °C</span>
+				<span class="speed-wind">Скорость ветра {{city.speedWind}} м/с</span>
+			</div>
 		</li>
 	</ul>
 </div>
