--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</ul>
 </div>
 
-<script src="scripts/angular.min.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
 <script src="scripts/index.js"></script>
 </body>
 </html>
