--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 
 <div ng-controller="weatherController" class="weather-controller">
-	<input type="text" ng-model="city" id="dataInput" placeholder="Введите название города" />
-	<button ng-click="this.showWeather( city )" type="button">Узнать погоду в этом городе</button>
+	<form ng-submit="this.showWeather( city )">
+		<input type="text" ng-model="city" id="dataInput" placeholder="Введите название города" />
+		<button type="submit">Узнать погоду в этом городе</button>
+	</form>
 	<span class="description">{{descriptionEmpty}}</span>
 	<ul class="output">
 		<li ng-repeat="city in cities">
