--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Weather widget</title>
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
-<body>
+<body ng-cloak>
 
 <div ng-controller="weatherController" class="weather-controller">
 	<form ng-submit="this.showWeather( city )">
